[tool.poetry]
name = "{{cookiecutter.project_name}}"
version = "{{cookiecutter.version}}"
description = "{{cookiecutter.description}}"
authors = ["{{cookiecutter.author}} <{{cookiecutter.email}}>"]
license = "{{cookiecutter.license}}"
readme = "README.md"
homepage = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
repository = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}"
documentation = "https://{{cookiecutter.project_name}}.readthedocs.io"
{% if cookiecutter.package_name != cookiecutter.project_name.replace('-', '_') -%}
packages = [
    { include = "{{cookiecutter.package_name}}", from = "src" },
]
{% endif -%}
classifiers = [
    "{{cookiecutter.development_status}}",
]

[tool.poetry.urls]
Changelog = "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/releases"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"

[tool.poetry.dependencies]
# >3.13 is NOT compatible with this template due to the sweeping removal of many stdlib modules
# https://docs.python.org/3.13/whatsnew/3.13.html#:~:text=officially%20supported%20platform.-,Important%20removals%3A,-PEP%20594%3A%20The
# 3.12 will be safe to use (will get security updates) until Monday, October 2, 2028
# if you are using this template after that date and it has not yet been updated to 3.13, PUT IT DOWN!
# an update will come eventually. feel free to email me at regulad@regulad.xyz
python = "^3.11,<3.13"
typer = {version = "^0.9.0", extras = ["all"]}
typing-extensions = "^4.13.2"  # should be updated on initalization of template, provides drop-in language features
importlib-metadata = "^6.8.0"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.10.0"
bandit = "^1.7.4"
black = "^23.7.0"  # 23.7.0 added support for py312
click = "<8.0.2"  # required by black. upgrading will require exchanging a number of dependencies
coverage = {extras = ["toml"], version = "^6.2"}
darglint = "^1.8.1"
# NOTE: this was an old version of flake8 when it was set.
# an upgrade to py313 or any future version will very likely require an even newer version
flake8 = "^5"
flake8-bugbear = "^21.9.2"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.5"
furo = ">=2021.11.12"
isort = "^5.10.1"
mypy = "^1.4.1"
pep8-naming = "^0.12.1"
pre-commit = "^2.16.0"
pre-commit-hooks = "^4.1.0"
pytest = "^6.2.5"
pyupgrade = "^2.29.1"
safety = "^1.10.3"
sphinx = "^4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = "^3.0.2"
typeguard = "^2.13.3"
xdoctest = {extras = ["colors"], version = "^0.15.10"}
myst-parser = {version = "^0.16.1"}
pyinstaller = "^5.13.0"

[tool.poetry.scripts]
{{cookiecutter.project_name}} = "{{cookiecutter.package_name}}.__main__:cli"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["{{cookiecutter.package_name}}", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.black]
line-length = {{cookiecutter.line_length}}
target-version = ["py311", "py312"]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
pretty = true
show_column_numbers = true
show_error_context = true

[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"
